modules/mukurtu_gin_custom/css/mukurtu-gin-custom.css
/* todo: when Claro is officially replaced by Gin (see https://www.drupal.org/about/core/blog/drupal-core-will-adopt-gin-admin-theme-to-replace-claro),
remove the .claro-details__description class and replace it with its Gin
counterpart, if one exists. */
.form-item__description, .fieldset__description, .claro-details__description {
  /* For form description text, force the line length to fill the width of its
  container. */

  /* I would rather not use !important here, but just setting max-width: 100%
  wasn't getting the changes to show up. I know it's possible to override the
  Gin variable --gin-max-line-length, however, I don't want to override that
  for the entire site, I just need it for forms. So !important it is. */
  max-width: 100% !important;
}

/* MW: Fixes checkbox and community name overlapping in protocol select community modal, hopefully other similar issues. Not sure why !important is required */
.gin-entity-browser .entity-browser-form .views-row .views-field-name {
    padding: 2.5rem !important;
    display: inline-flex;
}

/* MW: fixes paragraph titles being cut off in forms. */
.js .paragraph-type-title {
    flex-basis: 25%;
    min-width: 80px;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: visible !important;
}

